--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 index.html
-<!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="google91fd525361b98469" />
-  <title>هتل آپارتمان تهران</title>
-  <link href="https://fonts.googleapis.com/css2?family=Vazir&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Vazir', sans-serif; margin:0; padding:0; background: linear-gradient(135deg,#6a11cb,#2575fc); color:#fff; }
-    header { text-align:center; padding:40px 10px; background: rgba(0,0,0,0.4); box-shadow: 0 4px 6px rgba(0,0,0,0.3);}
-    header h1 { margin:0; font-size:2.5em; text-shadow: 2px 2px 8px rgba(0,0,0,0.5);}
-    header p { margin-top:10px; font-size:1.1em; }
-    .container { max-width: 1100px; margin:20px auto; padding:0 10px; }
-    .units { display:grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
-    .unit { background: rgba(255,255,255,0.1); border-radius:15px; padding:20px; text-align:center; transition: transform 0.4s, box-shadow 0.4s; }
-    .unit:hover { transform: translateY(-10px); box-shadow:0 15px 25px rgba(0,0,0,0.4);}
-    .unit h2 { margin-top:0; color:#ffd700; }
-    .unit p { margin:5px 0; color:#fff; font-weight:bold; }
-    .features, .contact { background: rgba(0,0,0,0.3); padding:25px; margin:25px 0; border-radius:15px; text-align:center; }
-    .features h2, .contact h2 { margin-top:0; color:#ffd700; }
-    .contact p, .features p { margin:10px 0; color:#fff; }
-    a { color:#ffd700; text-decoration:none; font-weight:bold; }
-    a:hover { text-decoration:underline; }
-    @media (max-width:600px){ .units { grid-template-columns: 1fr; } }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Google Site Verification -->
+<meta name="google-site-verification" content="google91fd525361b98469" />
+<title>هتل آپارتمان تهران</title>
+<link href="https://fonts.googleapis.com/css2?family=Vazir&display=swap" rel="stylesheet">
+<style>
+  body { font-family: 'Vazir', sans-serif; margin:0; padding:0; background: linear-gradient(135deg,#6a11cb,#2575fc); color:#fff; }
+  header { text-align:center; padding:40px 10px; background: rgba(0,0,0,0.4); box-shadow: 0 4px 6px rgba(0,0,0,0.3);}
+  header h1 { margin:0; font-size:2.5em; text-shadow: 2px 2px 8px rgba(0,0,0,0.5);}
+  header p { margin-top:10px; font-size:1.1em; }
+  .container { max-width: 1100px; margin:20px auto; padding:0 10px; }
+  .units { display:grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
+  .unit { background: rgba(255,255,255,0.1); border-radius:15px; padding:20px; text-align:center; transition: transform 0.4s, box-shadow 0.4s; }
+  .unit:hover { transform: translateY(-10px); box-shadow:0 15px 25px rgba(0,0,0,0.4);}
+  .unit img { width:100%; border-radius:10px; margin-bottom:10px; }
+  .unit h2 { margin-top:0; color:#ffd700; }
+  .unit p { margin:5px 0; color:#fff; font-weight:bold; }
+  .features, .contact { background: rgba(0,0,0,0.3); padding:25px; margin:25px 0; border-radius:15px; text-align:center; }
+  .features h2, .contact h2 { margin-top:0; color:#ffd700; }
+  .contact p, .features p { margin:10px 0; color:#fff; }
+  a { color:#ffd700; text-decoration:none; font-weight:bold; }
+  a:hover { text-decoration:underline; }
+  @media (max-width:600px){ .units { grid-template-columns: 1fr; } }
+</style>
 </head>
 <body>
 
@@ -39,21 +39,25 @@ index.html
   <div class="units">
     <div class="unit">
       <h2>تک خواب</h2>
+      <img src="images/tek-khab.jpg" alt="تک خواب">
       <p>قیمت: ۲۵۰۰ تومان</p>
       <p>ظرفیت: ۲ نفر</p>
     </div>
     <div class="unit">
       <h2>۲ خواب معمولی</h2>
+      <img src="images/2khab-mamooli.jpg" alt="۲ خواب معمولی">
       <p>قیمت: ۳۰۰۰ تومان</p>
       <p>ظرفیت: ۴ نفر</p>
     </div>
     <div class="unit">
       <h2>۲ خواب جکوزی</h2>
+      <img src="images/2khab-jacuzzi.jpg" alt="۲ خواب جکوزی">
       <p>قیمت: ۴۵۰۰ تومان</p>
       <p>ظرفیت: ۴ نفر</p>
     </div>
     <div class="unit">
       <h2>۳ خواب</h2>
+      <img src="images/3khab.jpg" alt="۳ خواب">
       <p>قیمت: ۴۰۰۰ تومان</p>
       <p>ظرفیت: ۶ نفر</p>
     </div>
