--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ header p { margin-top:10px; font-size:1.2em; }
 .top-panel button { margin:0 10px; padding:10px 20px; font-size:1em; cursor:pointer; border:none; border-radius:8px; background:#ffd700; color:#111; font-weight:bold; transition:0.3s;}
 .top-panel button:hover { background:#ffc107; }
 
-.container { max-width: 1100px; margin:20px auto; padding:0 10px; opacity:0; transform: translateY(50px); transition: all 1s ease; }
+.container { max-width: 1100px; margin:20px auto; padding:0 10px; transition: all 1s ease; }
 
 /* واحدها */
 .units { display:grid; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
@@ -72,7 +72,7 @@ a:hover { text-decoration:underline; transform: scale(1.1); }
 </div>
 
 <!-- پنل مشتری -->
-<div id="customerPanel">
+<div id="customerPanel" style="display:block;">
 <div class="container">
 
 <!-- واحدها -->
@@ -100,6 +100,7 @@ a:hover { text-decoration:underline; transform: scale(1.1); }
 </div>
 
 <!-- واحدهای دیگر مشابه، مثل ۲ خواب معمولی، ۲ خواب جکوزی، ۳ خواب -->
+<!-- کد مشابه واحدها را مطابق نسخه قبلی اضافه کنید -->
 
 </div>
 
